modif key google visible

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <script src="js/main.js"></script>
     <script src="js/map.js"></script>
 
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDM2OK107ZuM8p5Q-8XalzcsopxoC55AAA&libraries=places&&callback=initMap"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOURKEY&libraries=places&&callback=initMap"></script>
 
 </body>
 
